--- a/public/index.html
+++ b/public/index.html
@@ -46,37 +46,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4><i class="fa fa-address-book-o"></i> Todo List 회원가입</h4>
-        </div>
-        <div class="modal-body">
-          <form role="form">
-            <div class="form-group">
-              <label for="usrname"><i class="fa fa-user-circle"></i> 아이디</label>
-              <input type="text" class="form-control signUpId" id="usrname" placeholder="아이디를 입력해 주세요">
-            </div>
-            <div class="form-group">
-              <label for="email"><span class="glyphicon glyphicon-envelope"></span> 이메일</label>
-              <input type="email" class="form-control signUpEmail" id="email" placeholder="이메일을 입력해 주세요">
-            </div>
-            <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-lock"></span> 비밀번호</label>
-              <input type="password" class="form-control signUpPw" id="psw" placeholder="비밀번호를 입력해 주세요">
-            </div>
-            <div class="form-group">
-              <label for="repsw"><span class="glyphicon glyphicon-lock"></span> 비밀번호 확인</label>
-              <input type="password" class="form-control signUpRePw" id="repsw" placeholder="비밀번호를 재입력해 주세요">
-            </div>
-            <button type="button" class="btn btn-success btn-block signUpBtn"><span class="glyphicon glyphicon-off"></span> 회원가입</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="modal fade" id="myModal" role="dialog"></div>
 
   <div class="footer"><p>Todo List Copyright <i class="fa fa-copyright"></i> 2017 Kong All rights are not reserved.</p></div> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
